--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -3967,8 +3967,8 @@ body {
   position: relative;
   background-image: url(../img/game/HOTP/frame-strech.png);
   background-size: 100%;
-  padding-left: 1.552rem;
-  padding-right: 1.552rem;
+  padding-left: 1.636rem;
+  padding-right: 1.636rem;
 }
 #mainPage .game-zone.HOTP .play-game .game-content .frame > span {
   position: absolute;
@@ -3997,7 +3997,7 @@ body {
   background-position: bottom center;
   bottom: -1.4315rem;
 }
-#mainPage .game-zone.HOTP .play-game .game-content .frame-content {
+#mainPage .game-zone.HOTP .play-game .game-content .frame-result {
   background-color: rgba(29, 29, 29, 0.8);
   padding: 1.25rem;
   display: grid;
@@ -4005,17 +4005,17 @@ body {
   grid-template-columns: calc(30% - 0.5rem) calc(70% - 0.5rem);
   grid-template-rows: 4.25rem auto 1fr auto;
 }
-#mainPage .game-zone.HOTP .play-game .game-content .frame-content > * {
+#mainPage .game-zone.HOTP .play-game .game-content .frame-result > * {
   position: inherit;
   z-index: 3;
 }
-#mainPage .game-zone.HOTP .play-game .game-content .frame-content .img {
+#mainPage .game-zone.HOTP .play-game .game-content .frame-result .img {
   grid-column: 1/2;
   grid-row: 1/3;
   position: relative;
   padding: 0.4441221rem;
 }
-#mainPage .game-zone.HOTP .play-game .game-content .frame-content .img h6 {
+#mainPage .game-zone.HOTP .play-game .game-content .frame-result .img h6 {
   position: absolute;
   right: 0.4441221rem;
   bottom: 0.6941221rem;
@@ -4024,7 +4024,7 @@ body {
   background: linear-gradient(296deg, #D4951A 27.32%, #F3D99C 66.63%);
   color: black;
 }
-#mainPage .game-zone.HOTP .play-game .game-content .frame-content .img::before {
+#mainPage .game-zone.HOTP .play-game .game-content .frame-result .img::before {
   content: "";
   position: absolute;
   top: 0;
@@ -4036,25 +4036,25 @@ body {
   background-repeat: no-repeat;
   z-index: 2;
 }
-#mainPage .game-zone.HOTP .play-game .game-content .frame-content .compare {
+#mainPage .game-zone.HOTP .play-game .game-content .frame-result .compare {
   grid-column: -2/-1;
   grid-row: 1/2;
   display: flex;
   gap: 1rem;
 }
-#mainPage .game-zone.HOTP .play-game .game-content .frame-content .compare div {
+#mainPage .game-zone.HOTP .play-game .game-content .frame-result .compare div {
   flex: calc((100% - 1rem) / 2);
   display: grid;
   grid-template-rows: 50% 50%;
   grid-template-columns: 4.25rem 1fr;
   gap: 0 0.5rem;
 }
-#mainPage .game-zone.HOTP .play-game .game-content .frame-content .compare div img {
+#mainPage .game-zone.HOTP .play-game .game-content .frame-result .compare div img {
   grid-row: 1/-1;
   grid-column: 1/2;
   border-radius: 6.25rem;
 }
-#mainPage .game-zone.HOTP .play-game .game-content .frame-content .compare div h6 {
+#mainPage .game-zone.HOTP .play-game .game-content .frame-result .compare div h6 {
   grid-row: 1/2;
   grid-column: -2/-1;
   display: flex;
@@ -4062,34 +4062,34 @@ body {
   padding: 0.25rem 0;
   border-bottom: 0.0625rem solid #a8a8a8;
 }
-#mainPage .game-zone.HOTP .play-game .game-content .frame-content .compare div span {
+#mainPage .game-zone.HOTP .play-game .game-content .frame-result .compare div span {
   grid-row: -2/-1;
   grid-column: -2/-1;
   font-size: 0.875rem;
   padding: 0.25rem 0;
 }
 @media (max-width: 1024px) {
-  #mainPage .game-zone.HOTP .play-game .game-content .frame-content .compare div span {
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .compare div span {
     font-size: 0.75rem;
   }
 }
-#mainPage .game-zone.HOTP .play-game .game-content .frame-content .desc {
+#mainPage .game-zone.HOTP .play-game .game-content .frame-result .desc {
   grid-column: -2/-1;
   grid-row: 2/-2;
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
 }
-#mainPage .game-zone.HOTP .play-game .game-content .frame-content .desc p {
+#mainPage .game-zone.HOTP .play-game .game-content .frame-result .desc p {
   font-size: 0.875rem;
   color: #a8a8a8;
 }
 @media (max-width: 1024px) {
-  #mainPage .game-zone.HOTP .play-game .game-content .frame-content .desc p {
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .desc p {
     font-size: 0.75rem;
   }
 }
-#mainPage .game-zone.HOTP .play-game .game-content .frame-content .btns {
+#mainPage .game-zone.HOTP .play-game .game-content .frame-result .btns {
   grid-column: 1/-1;
   grid-row: -2/-1;
   display: flex;
@@ -4100,11 +4100,11 @@ body {
   line-height: 1.5;
 }
 @media (max-width: 1024px) {
-  #mainPage .game-zone.HOTP .play-game .game-content .frame-content .btns {
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .btns {
     font-size: 0.9375rem;
   }
 }
-#mainPage .game-zone.HOTP .play-game .game-content .frame-content .btns div {
+#mainPage .game-zone.HOTP .play-game .game-content .frame-result .btns div {
   display: flex;
   gap: 1rem;
 }
@@ -4129,28 +4129,28 @@ body {
   #mainPage .game-zone.HOTP .play-game .game-content .frame::after {
     bottom: calc(((100svw - 7.5rem - 3.5rem) * 0.6 - 11rem) * -0.035);
   }
-  #mainPage .game-zone.HOTP .play-game .game-content .frame-content {
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result {
     padding: 1.25rem 1rem;
     gap: 1rem 0.75rem;
     grid-template-columns: calc(40% - 0.375rem) calc(60% - 0.375rem);
     grid-template-rows: 9.25rem auto 1fr auto;
   }
-  #mainPage .game-zone.HOTP .play-game .game-content .frame-content .img {
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .img {
     padding: calc(((((100svw - 7.5rem - 3.5rem) * 0.6 - 11rem) * 0.894 - 2rem) * 0.4 - 0.5rem) * 0.045);
   }
-  #mainPage .game-zone.HOTP .play-game .game-content .frame-content .img h6 {
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .img h6 {
     right: calc(((((100svw - 7.5rem - 3.5rem) * 0.6 - 11rem) * 0.894 - 2rem) * 0.4 - 0.5rem) * 0.045);
     bottom: calc(((((100svw - 7.5rem - 3.5rem) * 0.6 - 11rem) * 0.894 - 2rem) * 0.4 - 0.5rem) * 0.045 + 0.25rem);
   }
-  #mainPage .game-zone.HOTP .play-game .game-content .frame-content .compare {
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .compare {
     gap: 0.75rem;
     flex-wrap: wrap;
   }
-  #mainPage .game-zone.HOTP .play-game .game-content .frame-content .btns div {
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .btns div {
     gap: 0.5rem;
   }
   #mainPage .game-zone.HOTP + .content {
-    height: calc((100svw - 7.5rem - 3.5rem) * 0.6 * 0.75 + 2.5rem) !important;
+    height: calc((100svw - 7.5rem - 3.5rem) * 0.6 * 0.7 + 2.5rem) !important;
   }
 }
 @media (max-width: 1280px) {
@@ -4167,57 +4167,57 @@ body {
   #mainPage .game-zone.HOTP .play-game .game-content .frame::after {
     bottom: calc(((100svw - 7.5rem - 3.5rem) * 0.6 - 11rem) * -0.05);
   }
-  #mainPage .game-zone.HOTP .play-game .game-content .frame-content {
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result {
     grid-template-columns: calc(55% - 0.5rem) calc(45% - 0.5rem);
     grid-template-rows: auto 1fr auto;
     gap: 1rem;
   }
-  #mainPage .game-zone.HOTP .play-game .game-content .frame-content .img {
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .img {
     grid-column: 1/2;
     grid-row: 1/2;
     padding: calc(((((100svw - 7.5rem - 3.5rem) * 0.6 - 11rem) * 0.894 - 2rem) * 0.55 - 0.5rem) * 0.045);
   }
-  #mainPage .game-zone.HOTP .play-game .game-content .frame-content .img h6 {
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .img h6 {
     right: calc(((((100svw - 7.5rem - 3.5rem) * 0.6 - 11rem) * 0.894 - 2rem) * 0.55 - 0.5rem) * 0.045);
     bottom: calc(((((100svw - 7.5rem - 3.5rem) * 0.6 - 11rem) * 0.894 - 2rem) * 0.55 - 0.5rem) * 0.045 + 0.25rem);
   }
-  #mainPage .game-zone.HOTP .play-game .game-content .frame-content .compare {
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .compare {
     grid-column: -2/-1;
     grid-row: 1/2;
     flex-direction: column;
     justify-content: space-between;
   }
-  #mainPage .game-zone.HOTP .play-game .game-content .frame-content .compare div {
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .compare div {
     display: flex;
     flex-direction: column;
     justify-content: center;
   }
-  #mainPage .game-zone.HOTP .play-game .game-content .frame-content .compare div img {
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .compare div img {
     flex: 4.5rem;
     max-height: 4.5rem;
     margin: 0.125rem auto;
   }
-  #mainPage .game-zone.HOTP .play-game .game-content .frame-content .compare div h6 {
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .compare div h6 {
     padding: 0.125rem 0;
     display: flex;
     align-items: flex-end;
     justify-content: center;
   }
-  #mainPage .game-zone.HOTP .play-game .game-content .frame-content .compare div span {
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .compare div span {
     padding: 0.125rem 0;
     display: block;
     text-align: center;
   }
-  #mainPage .game-zone.HOTP .play-game .game-content .frame-content .desc {
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .desc {
     grid-column: 1/-1;
     grid-row: 2/-2;
   }
-  #mainPage .game-zone.HOTP .play-game .game-content .frame-content .btns {
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .btns {
     grid-column: 1/-1;
     grid-row: -2/-1;
   }
   #mainPage .game-zone.HOTP + .content {
-    height: calc((100svw - 7.5rem - 3.5rem) * 0.6 + 2.5rem) !important;
+    height: calc((100svw - 7.5rem - 3.5rem) * 0.6 * 0.7 + 2.5rem) !important;
   }
 }
 @media (max-width: 1024px) {
@@ -4281,12 +4281,44 @@ body {
   #mainPage .game-zone.HOTP .play-game .game-content .frame::after {
     bottom: calc((100svw - 7.5rem - 3.5rem - 11rem) * -0.05);
   }
-  #mainPage .game-zone.HOTP .play-game .game-content .frame-content .img {
-    padding: calc((((100svw - 7.5rem - 3.5rem - 11rem) * 0.894 - 2rem) * 0.55 - 0.5rem) * 0.045);
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result {
+    grid-template-columns: calc(30% - 0.5rem) calc(70% - 0.5rem);
+    grid-template-rows: 4.25rem auto 1fr auto;
+    gap: 0 1rem;
   }
-  #mainPage .game-zone.HOTP .play-game .game-content .frame-content .img h6 {
-    right: calc((((100svw - 7.5rem - 3.5rem - 11rem) * 0.894 - 2rem) * 0.55 - 0.5rem) * 0.045);
-    bottom: calc((((100svw - 7.5rem - 3.5rem - 11rem) * 0.894 - 2rem) * 0.55 - 0.5rem) * 0.045 + 0.25rem);
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .img {
+    grid-row: 1/3;
+    padding: calc((((100svw - 7.5rem - 3.5rem - 11rem) * 0.894 - 2rem) * 0.3 - 0.5rem) * 0.045);
+  }
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .img h6 {
+    right: calc((((100svw - 7.5rem - 3.5rem - 11rem) * 0.894 - 2rem) * 0.3 - 0.5rem) * 0.045);
+    bottom: calc((((100svw - 7.5rem - 3.5rem - 11rem) * 0.894 - 2rem) * 0.3 - 0.5rem) * 0.045 + 0.25rem);
+  }
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .compare div {
+    display: grid;
+    grid-template-rows: 50% 50%;
+    grid-template-columns: 4.25rem 1fr;
+    gap: 0 0.5rem;
+  }
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .compare div img {
+    grid-row: 1/-1;
+    grid-column: 1/2;
+  }
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .compare div h6 {
+    grid-row: 1/2;
+    grid-column: -2/-1;
+  }
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .compare div span {
+    grid-row: -2/-1;
+    grid-column: -2/-1;
+  }
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .desc {
+    grid-column: -2/-1;
+    grid-row: 2/-2;
+    margin: 1rem 0;
+  }
+  #mainPage .game-zone.HOTP + .content {
+    height: auto !important;
   }
 }
 @media (max-width: 768px) {
@@ -4296,6 +4328,61 @@ body {
   #mainPage .game-zone.MC .play-game .game-content .result .wheel {
     width: calc((100svw - 2rem - 2rem) * 0.4);
     height: calc((100svw - 2rem - 2rem) * 0.4);
+  }
+  #mainPage .game-zone.HOTP {
+    height: calc((100svw - 2rem - 2rem) * 0.65) !important;
+  }
+  #mainPage .game-zone.HOTP .default .game-title::before {
+    height: 5rem;
+  }
+  #mainPage .game-zone.HOTP.play {
+    height: auto !important;
+  }
+  #mainPage .game-zone.HOTP .play-game .game-content .frame {
+    padding-left: calc((100svw - 2rem - 2rem - 3.5rem) * 0.05);
+    padding-right: calc((100svw - 2rem - 2rem - 3.5rem) * 0.05);
+  }
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result {
+    grid-template-columns: calc(55% - 0.5rem) calc(45% - 0.5rem);
+    grid-template-rows: auto 1fr auto;
+    gap: 0.75rem;
+  }
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .img {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    padding: calc((((100svw - 2rem - 2rem - 3.5rem) * 0.894 - 2rem) * 0.55 - 0.5rem) * 0.045);
+  }
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .img h6 {
+    right: calc((((100svw - 2rem - 2rem - 3.5rem) * 0.894 - 2rem) * 0.55 - 0.5rem) * 0.045);
+    bottom: calc((((100svw - 2rem - 2rem - 3.5rem) * 0.894 - 2rem) * 0.55 - 0.5rem) * 0.045 + 0.125rem);
+  }
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .compare div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .compare div img {
+    flex: 3rem;
+    max-height: 3rem;
+  }
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .desc {
+    grid-column: 1/-1;
+    grid-row: 2/-2;
+    margin: 0;
+  }
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .btns {
+    flex-wrap: wrap;
+    gap: 0.5rem;
+  }
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .btns > * {
+    flex: 100%;
+  }
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .btns > div {
+    flex-wrap: wrap;
+    gap: 0.75rem;
+  }
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .btns > div button {
+    flex: 100%;
   }
 }
 @media (max-width: 516px) {
@@ -4327,6 +4414,36 @@ body {
     top: 2rem;
     width: calc((100svw - 2rem - 2rem) * 0.35);
     height: calc((100svw - 2rem - 2rem) * 0.35);
+  }
+  #mainPage .game-zone.HOTP {
+    height: calc((100svw - 2rem - 2rem) * 0.65) !important;
+  }
+  #mainPage .game-zone.HOTP .default .game-title::before {
+    height: 5rem;
+  }
+  #mainPage .game-zone.HOTP.play {
+    height: auto !important;
+  }
+  #mainPage .game-zone.HOTP .play-game .game-content {
+    padding: 6.75rem 0.25rem 1.75rem;
+  }
+  #mainPage .game-zone.HOTP .play-game .game-content .frame {
+    padding-left: calc((100svw - 2rem - 2rem - 0.5rem) * 0.04);
+    padding-right: calc((100svw - 2rem - 2rem - 0.5rem) * 0.04);
+  }
+  #mainPage .game-zone.HOTP .play-game .game-content .frame::before {
+    top: calc((100svw - 2rem - 2rem - 0.5rem) * -0.05);
+  }
+  #mainPage .game-zone.HOTP .play-game .game-content .frame::after {
+    bottom: calc((100svw - 2rem - 2rem - 0.5rem) * -0.035);
+  }
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result {
+    grid-template-columns: calc(65% - 0.5rem) calc(35% - 0.5rem);
+    gap: 1rem 0.75rem;
+  }
+  #mainPage .game-zone.HOTP .play-game .game-content .frame-result .img h6 {
+    right: calc((((100svw - 2rem - 2rem - 0.5rem) * 0.894 - 2rem) * 0.55 - 0.5rem) * 0.045);
+    bottom: calc((((100svw - 2rem - 2rem - 0.5rem) * 0.894 - 2rem) * 0.55 - 0.5rem) * 0.045 + 0.25rem);
   }
 }
 @keyframes fade-in {
